# simple-extrinsic-debug

./: .gitignore  Cargo.toml  README.md
src/: gm.rs  main.rs  readme.md
