[package]
name = "substrate-interaction"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master" }

#substrate-rpc-client = "0.34.0"
tokio = { version = "1", features = ["full"] }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
#kitchensink-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

#parity-scale-codec = "3.6.9"
subxt = "0.37.0"